# CodeCompass

plugins/github/certify/: extensions.hpp  https_verification.hpp
plugins/github/certify/impl/: extensions.hpp  https_verification.hpp  https_verification.ipp
plugins/github/model/: CMakeLists.txt
plugins/github/model/include/model/: comment.h  commit.h  commitfile.h  issue.h  label.h  milestone.h  person.h  pull.h  pullfile.h  repository.h  review.h
plugins/github/parser/: CMakeLists.txt
plugins/github/parser/include/githubparser/: githubparser.h
plugins/github/parser/src/: githubdataconverter.cpp  githubdataconverter.h  githubparser.cpp
plugins/github/service/: CMakeLists.txt  github.thrift
plugins/github/service/include/service/: githubservice.h
plugins/github/service/src/: githubservice.cpp  plugin.cpp
plugins/github/webgui/js/: github.js
plugins/yaml/parser/include/yamlparser/: yamlparser.h
plugins/yaml/parser/src/: yamlparser.cpp
plugins/yaml/service/: yaml.thrift
plugins/yaml/webgui/js/: yaml.js
util/src/: logutil.cpp
